--- a/default.css
+++ b/default.css
@@ -310,7 +310,7 @@
 	{
 		overflow: hidden;
 		padding: 2em 0em;
-		background: url(images/bg01.jpg) repeat-x center top;
+		background: repeat-x center top;
 	}
 
 	#header
